--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 
 :root{
-   --yellow:#f5bf23;
+   --yellow:#FF5F1F;
    --black:#111;
    --white:#fff;
    --light-color:#666;
